Testing and fixing the GUI with J11.