@@ -38,8 +38,8 @@ public class IntegerEditor extends DefaultCellEditor {
 	public IntegerEditor(int min, int max) {
 		super(new JFormattedTextField());
 		ftf = (JFormattedTextField) getComponent();
-		minimum = new Integer(min);
-		maximum = new Integer(max);
+		minimum = min;
+		maximum = max;
 
 		// Set up the editor for the integer cells.
 		integerFormat = NumberFormat.getIntegerInstance();
@@ -84,7 +84,7 @@ public class IntegerEditor extends DefaultCellEditor {
 		if (o instanceof Integer) {
 			return o;
 		} else if (o instanceof Number) {
-			return new Integer(((Number) o).intValue());
+			return Integer.valueOf(((Number) o).intValue ());
 		} else {
 			if (DEBUG) {
 				System.out.println("getCellEditorValue: o isn't a Number");
